--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav text-end" id="navItems">
               <li class="nav-item mx-5">
-                <a class="nav-link fs-3 active" aria-current="page" href="#banner" id="link">About Me</a>
+                <a class="nav-link fs-3 active" aria-current="page" href="#banner">About Me</a>
               </li>
               <li class="nav-item mx-5">
-                <a class="nav-link fs-3" href="resume.html" id="link">Resume</a>
+                <a class="nav-link fs-3" href="resume.html">Resume</a>
               </li>
               <li class="nav-item mx-5">
-                <a class="nav-link fs-3" href="projects.html" id="link">Projects</a>
+                <a class="nav-link fs-3" href="projects.html">Projects</a>
               </li>
               <li class="nav-item mx-5">
-                <a class="nav-link fs-3" href="contact.html" id="link">Contact Me</a>
+                <a class="nav-link fs-3" href="contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
