--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-5 d-flex justify-content-center align-items-center">
           <div class="card" id="aboutCard">
             <div class="card-body">
-              <h2 class="card-title">Hobbies</h2>
+              <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
                 Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
