--- a/contact.html
+++ b/contact.html
@@ -4,43 +4,112 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Thomas Adler E-Portfolio | About Me</title>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" rel="stylesheet">
+  <!-- Box Icons -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <!-- My CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="index.html">About Me</a>
-          <a class="nav-link" href="resume.html">Resume</a>
-          <a class="nav-link"  href="projects.html">Projects</a>
-          <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
-        </div>
+<nav class="navbar navbar-expand-lg" id="navbar" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand fs-1 fw-bolder text-end col-3" href="#formBox">Thomas Adler</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav text-end" id="navItems">
+        <li class="nav-item mx-4">
+          <a class="nav-link fs-3" href="index.html">About Me</a>
+        </li>
+        <li class="nav-item mx-4">
+          <a class="nav-link fs-3" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item dropdown mx-4">
+          <a class="nav-link fs-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="projects.html#intro">About</a></li>
+            <li><a class="dropdown-item" href="projects.html#project1">118 Midterm</a></li>
+            <li><a class="dropdown-item" href="projects.html#project2">WS Deckbuilder</a></li>
+            <li><a class="dropdown-item" href="projects.html#project3">Slay the Spire Mod</a></li>
+            <li><a class="dropdown-item" href="projects.html#project4">Soul Nomad Speedrun</a></li>
+          </ul>
+        </li>
+        <li class="nav-item mx-4">
+          <a class="nav-link fs-3 active" aria-current="page" href="contact.html">Contact Me</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid mb-5" id="contact">
+  <div class="row">
+    <img src="images/banner.jpg" alt="" id="banner">
+  </div>
+  <div class="row my-5">
+    <div class="col d-flex flex-column text-center">
+      <h1 class="fw-bold">Have any questions?</h1>
+      <h3 class="text-center">Please contact me with the form below.</h3>
+      <h4 class="fs-3">I'd love to hear from you!</h4>
+    </div>
+  </div>
+  <div class="row d-flex mt-5">
+    <div class="col-lg"></div>
+    <div class="col-lg-6 d-flex flex-column align-items-left mx-auto" id="formBox">
+      <h1>Name</h1>
+      <div class="mb-4">
+        <label for="nameInput" class="form-label">Name</label>
+        <input type="text" class="form-control" id="nameInput" placeholder="John Smith">
+      </div>
+      <h1>Email</h1>
+      <div class="mb-4">
+        <label for="emailInput" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
+      </div>
+      <h1>Comments</h1>
+      <div class="mb-4">
+        <label for="commentsArea" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="commentsArea" rows="5"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary align-self-end fs-3 fw-bold col-lg-3 mb-5">Submit</button>
+    </div>
+    <div class="col-lg"></div>
+  </div>
+</div>
+
+<footer class="container-fluid py-2" id="footer">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col-lg-3">
+      <div class="d-flex justify-content-evenly" id="socials">
+        <a href="https://twitter.com/" target="_blank"><i class="bi-twitter" id="twitter"></i></a>
+        <a href="https://ca.linkedin.com/" target="_blank"><i class="bi-linkedin" id="linked"></i></a>
+        <a href="https://www.youtube.com/@dragonmz5274" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
       </div>
     </div>
-  </nav>
-
-  <footer class="container-fluid py-4">
-    <div class="row">
-      <div class="container d-flex justify-content-evenly py-4 col-md-3">
-        <a href="https://x.com/" target="_blank"><img src="images/twitter.png" alt="twitter logo" width="32px" height="32px"></a>
-        <a href="https://ca.linkedin.com/" target="_blank"><img src="images/linkedin.png" alt="linkedin logo" width="32px" height="32px"></a>
-        <a href="https://www.youtube.com/@dragonmz5274" target="_blank"><img src="images/youtube.png" alt="youtube logo" width="32px" height="32px"></a>
+    <div class="col"></div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="text-center py-2">
+        <p>Copyright © 2023 - Thomas Adler</p>
       </div>
     </div>
-    <div class="text-center py-4">
-      <p>Copyright © 2023 - Thomas Adler</p>
-    </div>
-  </footer>
+  </div>
+</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
