--- a/index.html
+++ b/index.html
@@ -4,35 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Thomas Adler E-Portfolio | About Me</title>
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" rel="stylesheet">
+  <!-- Box Icons -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <!-- My CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
   <nav class="navbar navbar-expand-lg" id="navbar" data-bs-theme="dark">
     <div class="container-fluid">
-          <a class="navbar-brand fs-1 fw-bolder text-end col-3" href="#banner">Thomas Adler</a>
+          <a class="navbar-brand fs-1 fw-bolder text-end col-3" href="contact.html#formBox">Thomas Adler</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav text-end" id="navItems">
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link fs-3 active" aria-current="page" href="#banner">About Me</a>
               </li>
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link fs-3" href="resume.html">Resume</a>
               </li>
-              <li class="nav-item mx-5">
-                <a class="nav-link fs-3" href="projects.html">Projects</a>
+              <li class="nav-item dropdown mx-4">
+                <a class="nav-link fs-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="projects.html#intro">About</a></li>
+                  <li><a class="dropdown-item" href="projects.html#project1">118 Midterm</a></li>
+                  <li><a class="dropdown-item" href="projects.html#project2">WS Deckbuilder</a></li>
+                  <li><a class="dropdown-item" href="projects.html#project3">Slay the Spire Mod</a></li>
+                  <li><a class="dropdown-item" href="projects.html#project4">Soul Nomad Speedrun</a></li>
+                </ul>
               </li>
-              <li class="nav-item mx-5">
+              <li class="nav-item mx-4">
                 <a class="nav-link fs-3" href="contact.html">Contact Me</a>
               </li>
             </ul>
@@ -42,11 +55,11 @@
 
     <div class="container-fluid" id="whoami">
       <div class="row">
-        <img src="images/banner.jpg" alt="me at ueno zoo, tokyo" class="" id="banner">
+        <img src="images/banner.jpg" alt="me at ueno zoo, tokyo" id="banner">
       </div>
       <div class="row">
         <div class="col text-center pt-5">
-          <h1>About Me</h1>
+          <h4 class="fs-1 fw-bold">About Me</h4>
         </div>
       </div>
       <div class="row">
@@ -63,22 +76,43 @@
 
     <div class="container-fluid p-5 d-flex justify-content-center align-items-center" id="hobbies">
       <div class="row">
-        <div class="col-lg-6 d-flex justify-content-center">
-          <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded">
+        <div class="col-lg-6 d-flex justify-content-center mb-5">
+          <div id="carouselIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/1520383256471.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/1520383256471.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/1520383256471.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
         <div class="col-lg"></div>
-        <div class="col-lg-5 d-flex justify-content-center align-items-center">
-          <div class="card" id="aboutCard">
-            <div class="card-body">
-              <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
-                Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
-                Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
-                Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
-                Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
-            </div>
-          </div>
+        <div class="col-lg-5 d-flex flex-column justify-content-center">
+          <h2 class="fs-1 fw-bolder">Hobbies</h2>
+          <p class="fs-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
+            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
+            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
+            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
+            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
         </div>
       </div>
     </div>
