--- a/projects.html
+++ b/projects.html
@@ -3,42 +3,205 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Thomas Adler E-Portfolio | Projects</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <title>Thomas Adler E-Portfolio | About Me</title>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" rel="stylesheet">
+  <!-- Box Icons -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <!-- My CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" id="navbar" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand fs-1 fw-bolder text-end col-3" href="contact.html#formBox">Thomas Adler</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="index.html">About Me</a>
-        <a class="nav-link" href="resume.html">Resume</a>
-        <a class="nav-link active" aria-current="page" href="projects.html">Projects</a>
-        <a class="nav-link" href="contact.html">Contact</a>
-      </div>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav text-end" id="navItems">
+        <li class="nav-item mx-4">
+          <a class="nav-link fs-3" href="index.html">About Me</a>
+        </li>
+        <li class="nav-item mx-4">
+          <a class="nav-link fs-3" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item dropdown mx-4">
+          <a class="nav-link fs-3 dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-current="page" aria-expanded="false">Projects</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#intro">About</a></li>
+            <li><a class="dropdown-item" href="#project1">118 Midterm</a></li>
+            <li><a class="dropdown-item" href="#project2">WS Deckbuilder</a></li>
+            <li><a class="dropdown-item" href="#project3">Slay the Spire Mod</a></li>
+            <li><a class="dropdown-item" href="#project4">Soul Nomad Speedrun</a></li>
+          </ul>
+        </li>
+        <li class="nav-item mx-4">
+          <a class="nav-link fs-3" href="contact.html">Contact Me</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
 
-<footer class="container-fluid py-4">
-  <div class="row">
-    <div class="container d-flex justify-content-evenly py-4 col-md-3">
-      <a href="https://x.com/" target="_blank"><img src="images/twitter.png" alt="twitter logo" width="32px" height="32px"></a>
-      <a href="https://ca.linkedin.com/" target="_blank"><img src="images/linkedin.png" alt="linkedin logo" width="32px" height="32px"></a>
-      <a href="https://www.youtube.com/@dragonmz5274" target="_blank"><img src="images/youtube.png" alt="youtube logo" width="32px" height="32px"></a>
+<div class="container-fluid pb-5" id="intro">
+  <div class="row mb-5">
+    <img src="images/banner.jpg" alt="" id="banner">
+  </div>
+  <div class="row mb-5">
+    <div class="col text-center">
+      <h4 class="fs-1 fw-bold">Projects</h4>
     </div>
   </div>
-  <div class="text-center py-4">
-    <p>Copyright © 2023 - Thomas Adler</p>
+  <div class="row">
+    <div class="col text-center">
+      <p class="fs-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
+        Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
+        Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid p-5" id="project1">
+  <div class="row mb-5">
+    <div class="col">
+      <h4 class="fs-1 fw-bold">118 Webdev Midterm</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6 d-flex justify-content-center">
+      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+    </div>
+    <div class="col-lg"></div>
+    <div class="col-lg-5 d-flex justify-content-center align-items-center">
+      <div class="card myCard" id="p1Card">
+        <div class="card-body">
+          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
+            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
+            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
+            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
+            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid p-5" id="project2">
+  <div class="row mb-5">
+    <div class="col">
+      <h4 class="fs-1 fw-bold">Weiss Schwarz Deckbuilder</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6 d-flex justify-content-center">
+      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+    </div>
+    <div class="col-lg"></div>
+    <div class="col-lg-5 d-flex justify-content-center align-items-center">
+      <div class="card myCard" id="p2Card">
+        <div class="card-body">
+          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
+            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
+            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
+            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
+            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid p-5" id="project3">
+  <div class="row mb-5">
+    <div class="col">
+      <h4 class="fs-1 fw-bold">Slay the Spire Mod</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6 d-flex justify-content-center">
+      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+    </div>
+    <div class="col-lg"></div>
+    <div class="col-lg-5 d-flex justify-content-center align-items-center">
+      <div class="card myCard" id="p3Card">
+        <div class="card-body">
+          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
+            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
+            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
+            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
+            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid p-5" id="project4">
+  <div class="row mb-5">
+    <div class="col">
+      <h4 class="fs-1 fw-bold">Soul Nomad Speedrun</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6 d-flex justify-content-center">
+      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+    </div>
+    <div class="col-lg"></div>
+    <div class="col-lg-5 d-flex justify-content-center align-items-center">
+      <div class="card myCard" id="p4Card">
+        <div class="card-body">
+          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
+            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
+            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
+            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
+            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer class="container-fluid py-2" id="footer">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col-lg-3">
+      <div class="d-flex justify-content-evenly" id="socials">
+        <a href="https://twitter.com/" target="_blank"><i class="bi-twitter" id="twitter"></i></a>
+        <a href="https://ca.linkedin.com/" target="_blank"><i class="bi-linkedin" id="linked"></i></a>
+        <a href="https://www.youtube.com/@dragonmz5274" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
+      </div>
+    </div>
+    <div class="col"></div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="text-center py-2">
+        <p>Copyright © 2023 - Thomas Adler</p>
+      </div>
+    </div>
   </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
