--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
 </head>
 <body>
 
+<!--Using bootstrap classes this creates a standard top navbar that turns into a hamburger bar at smaller sizes
+The projects icon is a dropdown menu instead of a standard anchor with each part going to a different section of that page-->
 <nav class="navbar navbar-expand-lg" id="navbar" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand fs-1 fw-bolder text-end col-3" href="#formBox">Thomas Adler</a>
@@ -38,7 +40,7 @@
         <li class="nav-item dropdown mx-4">
           <a class="nav-link fs-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="projects.html#intro">About</a></li>
+            <li><a class="dropdown-item" href="projects.html#intro">Top</a></li>
             <li><a class="dropdown-item" href="projects.html#project1">118 Midterm</a></li>
             <li><a class="dropdown-item" href="projects.html#project2">WS Deckbuilder</a></li>
             <li><a class="dropdown-item" href="projects.html#project3">Slay the Spire Mod</a></li>
@@ -53,9 +55,11 @@
   </div>
 </nav>
 
+
+<!--Bootstrap form with name, email, text fields and a submit button-->
 <div class="container-fluid mb-5" id="contact">
   <div class="row">
-    <img src="images/banner.jpg" alt="" id="banner">
+    <img src="images/banner2.jpg" alt="me and travis in front of a christmas tree" id="banner">
   </div>
   <div class="row my-5">
     <div class="col d-flex flex-column text-center">
@@ -88,6 +92,7 @@
   </div>
 </div>
 
+<!--Basic footer with social media icons and copyright, the previous sections background gradient flows into this color nicely-->
 <footer class="container-fluid py-2" id="footer">
   <div class="row">
     <div class="col"></div>
@@ -109,6 +114,7 @@
   </div>
 </footer>
 
+<!--Bootstrap Javascript import-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
