--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,8 @@
 </head>
 <body>
 
+<!--Using bootstrap classes this creates a standard top navbar that turns into a hamburger bar at smaller sizes
+The projects icon is a dropdown menu instead of a standard anchor with each part going to a different section of that page-->
 <nav class="navbar navbar-expand-lg" id="navbar" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand fs-1 fw-bolder text-end col-3" href="contact.html#formBox">Thomas Adler</a>
@@ -38,7 +40,7 @@
         <li class="nav-item dropdown mx-4">
           <a class="nav-link fs-3 dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-current="page" aria-expanded="false">Projects</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#intro">About</a></li>
+            <li><a class="dropdown-item" href="#intro">Top</a></li>
             <li><a class="dropdown-item" href="#project1">118 Midterm</a></li>
             <li><a class="dropdown-item" href="#project2">WS Deckbuilder</a></li>
             <li><a class="dropdown-item" href="#project3">Slay the Spire Mod</a></li>
@@ -55,7 +57,7 @@
 
 <div class="container-fluid pb-5" id="intro">
   <div class="row mb-5">
-    <img src="images/banner.jpg" alt="" id="banner">
+    <img src="images/IMG_20221118_112133.jpg" alt="macross mecha statue" id="banner">
   </div>
   <div class="row mb-5">
     <div class="col text-center">
@@ -64,10 +66,8 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <p class="fs-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
-        Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
-        Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna.</p>
+      <p class="fs-3 mx-5">I'm still early on in my career so I don't really have impressive projects to show off,
+      but here's a few things I'm proud and a few things I plan to do as my skills and experience increase</p>
     </div>
   </div>
 </div>
@@ -80,19 +80,19 @@
   </div>
   <div class="row">
     <div class="col-lg-6 d-flex justify-content-center">
-      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+      <img src="images/midterm.jpg" alt="websitemidterm" class="img-fluid rounded imagecard">
     </div>
     <div class="col-lg"></div>
     <div class="col-lg-5 d-flex justify-content-center align-items-center">
       <div class="card myCard" id="p1Card">
         <div class="card-body">
-          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
-            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
-            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
-            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
-            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+          <h2 class="card-title fs-1 fw-bolder">Web Dev Midterm</h2>
+          <p class="card-text">This was my midterm project website for 118 Web Fundamentals.<br>
+          I received a 94% grade on this.<br>
+          The page is a three section website selling three products with a fixed top navbar and
+          the final section has a video playing as the background. My page is styled as an in-universe
+          Armored Core 6 page selling Boosters from the company Schneider</p><br>
+          <a target="_blank" href="https://deepblue.camosun.bc.ca/~c0334698/ICS118/midterm/">View it Here</a>
         </div>
       </div>
     </div>
@@ -107,19 +107,18 @@
   </div>
   <div class="row">
     <div class="col-lg-6 d-flex justify-content-center">
-      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+      <img src="images/Screenshot_20231203_213653_com.Mog.WSDeckBuilder.jpg" alt="screenshot of the current WS android app" class="img-fluid rounded imagecard">
     </div>
     <div class="col-lg"></div>
     <div class="col-lg-5 d-flex justify-content-center align-items-center">
       <div class="card myCard" id="p2Card">
         <div class="card-body">
-          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
-            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
-            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
-            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
-            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+          <h2 class="card-title fs-1 fw-bolder">WS Deckbuilder</h2>
+          <p class="card-text">I've been playing a card game known as Weiss Schwarz for over a decade.
+            It is an anime themed 1v1 TCG that releases sets in Japanese first and some get an English release.<br>
+            We currently have an android app for translations and deckbuilding but it is out of date and lacking in functionality.
+            So I want to remake it with a better style, better filter, with a windows port as well<br>
+            Planned for: Next Summer</p>
         </div>
       </div>
     </div>
@@ -134,19 +133,17 @@
   </div>
   <div class="row">
     <div class="col-lg-6 d-flex justify-content-center">
-      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+      <img src="images/STS-Switch.jpg" alt="Slay the Spire titlescreen with Ironclad" class="img-fluid rounded imagecard">
     </div>
     <div class="col-lg"></div>
     <div class="col-lg-5 d-flex justify-content-center align-items-center">
       <div class="card myCard" id="p3Card">
         <div class="card-body">
-          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
-            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
-            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
-            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
-            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+          <h2 class="card-title fs-1 fw-bolder">Slay the Spire Modding</h2>
+          <p class="card-text">Slay the Spire is a deckbuilding roguelike video game that has a robust modding scene<br>
+          It turns out modding is written in Java and I would love to get some experience so I'm planning to make a
+          Symphogear themed character mod for the game<br>
+          Planned for: Next Summer</p>
         </div>
       </div>
     </div>
@@ -161,25 +158,30 @@
   </div>
   <div class="row">
     <div class="col-lg-6 d-flex justify-content-center">
-      <img src="images/1520383256471.jpg" alt="sympho2018meetup" class="img-fluid rounded imagecard">
+      <iframe width="720" height="430" src="https://www.youtube.com/embed/gjN7Swa9TuY?si=Hac9wLjGWunLBh4r"
+              title="YouTube video player" allow="accelerometer; autoplay;
+              clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
     </div>
     <div class="col-lg"></div>
     <div class="col-lg-5 d-flex justify-content-center align-items-center">
       <div class="card myCard" id="p4Card">
         <div class="card-body">
-          <h2 class="card-title fs-1 fw-bolder">Hobbies</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Maecenas pharetra leo a odio laoreet, vitae consectetur lorem faucibus. Donec sed eleifend nibh.
-            Vestibulum malesuada non tellus eget bibendum. In tempus eu erat sit amet dictum. Nullam id est varius, viverra purus eu, pharetra massa.
-            Phasellus eros ipsum, tempus at diam quis, condimentum suscipit magna. Duis ultricies vitae arcu elementum scelerisque.
-            Fusce at augue nec augue tempus efficitur vel consectetur massa. Vivamus quis tortor vehicula, bibendum ex sit amet, interdum eros.
-            Aenean sollicitudin tempor massa. Quisque in magna nec velit viverra consequat.</p>
+          <h2 class="card-title fs-1 fw-bolder">Soul Nomad Speedrun WR (Former)</h2>
+          <p class="card-text">This may not be a traditional e-portfolio project but I am extremely proud
+          of my speedrun of Soul Nomad for the PS2. This is not a well known game and in fact before I did
+          this run the only "speedrun" that existed was 10 hours long.<br>
+          Scouring through decade old GameFAQS guides and forums along with some practice with the game I
+          devised a route and strategies for every mission in the game and practiced down to a time of 3 hours and 26 minutes.<br>
+          Later on I came in contact with a Japanese runner known on youtube as holyangelnyanko who I collaborated with and he
+          took the run down to two and a half hours.</p>
         </div>
       </div>
     </div>
   </div>
 </div>
 
+<!--Basic footer with social media icons and copyright, the previous sections background gradient flows into this color nicely-->
 <footer class="container-fluid py-2" id="footer">
   <div class="row">
     <div class="col"></div>
@@ -201,6 +203,7 @@
   </div>
 </footer>
 
+<!--Bootstrap Javascript import-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
