--- a/resume.html
+++ b/resume.html
@@ -194,7 +194,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
 </div>
 
 <div class="text-center mb-3">
-  <a class="fs-1" href="" id="resumeDownload">| Download Resume |</a>
+  <a class="fs-1" href="Thomas_Adler_Resume.pdf" id="resumeDownload">| Download Resume |</a>
 </div>
 
 <!--Basic footer with social media icons and copyright, the previous sections background gradient flows into this color nicely-->
