--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </nav>
 
-
+<!--Only Section-->
 <!--Bootstrap form with name, email, text fields and a submit button-->
 <div class="container-fluid mb-5" id="contact">
   <div class="row">
