--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </nav>
 
+<!--First section, just a bit of fluff text-->
 <div class="container-fluid pb-5" id="intro">
   <div class="row mb-5">
     <img src="images/IMG_20221118_112133.jpg" alt="macross mecha statue" id="banner">
@@ -67,11 +68,12 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   <div class="row">
     <div class="col text-center">
       <p class="fs-3 mx-5">I'm still early on in my career so I don't really have impressive projects to show off,
-      but here's a few things I'm proud and a few things I plan to do as my skills and experience increase</p>
+      but here's a few things I'm proud of and a few things I plan to do as my skills and experience increase</p>
     </div>
   </div>
 </div>
 
+<!--First Project, my midterm-->
 <div class="container-fluid p-5" id="project1">
   <div class="row mb-5">
     <div class="col">
@@ -99,6 +101,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </div>
 
+<!--Second Project, the planned WS Deckbuilder-->
 <div class="container-fluid p-5" id="project2">
   <div class="row mb-5">
     <div class="col">
@@ -125,6 +128,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </div>
 
+<!--Third Project, a planned StS mod-->
 <div class="container-fluid p-5" id="project3">
   <div class="row mb-5">
     <div class="col">
@@ -150,6 +154,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </div>
 
+<!--Last "Project" my Soul Nomad Speedrun-->
 <div class="container-fluid p-5" id="project4">
   <div class="row mb-5">
     <div class="col">
