--- a/resume.html
+++ b/resume.html
@@ -111,6 +111,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </div>
 
+<!--Education Section-->
 <div class="container-fluid p-5" id="education">
   <div class="row mb-5">
     <div class="col text-center">
@@ -138,6 +139,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </div>
 
+<!--Work Experience Section-->
 <div class="container-fluid p-5" id="work">
   <div class="row mb-5">
     <div class="col text-center">
@@ -166,6 +168,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </div>
 
+<!--Volunteer/TsukinoCon info-->
 <div class="container-fluid p-5" id="volunteer">
   <div class="row mb-5">
     <div class="col text-center">
@@ -193,6 +196,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </div>
 
+<!--Download Resume button-->
 <div class="text-center mb-3">
   <a class="fs-1" href="Thomas_Adler_Resume.pdf" id="resumeDownload">| Download Resume |</a>
 </div>
