--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ the background gradient start at a better spot-->
       </div>
     </div>
 
+<!--Hobbies Section-->
 <!--Bootstrap Carousel with indicator buttons-->
     <div class="container-fluid p-5 d-flex justify-content-center align-items-center" id="hobbies">
       <div class="row">
