--- a/contact.html
+++ b/contact.html
@@ -86,10 +86,17 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
         <label for="commentsArea" class="form-label">Example textarea</label>
         <textarea class="form-control" id="commentsArea" rows="5"></textarea>
       </div>
-      <button type="submit" class="btn btn-primary align-self-end fs-3 fw-bold col-lg-3 mb-5">Submit</button>
+      <button type="submit" class="btn btn-primary align-self-end fs-3 fw-bold col-lg-3 mb-5">
+        <a href="mailto:dont3verjudgeme@hotmail.com">Submit</a>
+      </button>
     </div>
     <div class="col-lg"></div>
   </div>
+</div>
+
+<!--Floating fixed goto Top button-->
+<div class="d-flex justify-content-center align-items-center" id="topbtn">
+  <a href="#navbar"><i class="bi bi-arrow-up fw-bolder"></i></a>
 </div>
 
 <!--Basic footer with social media icons and copyright, the previous sections background gradient flows into this color nicely-->
@@ -100,7 +107,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
       <div class="d-flex justify-content-evenly" id="socials">
         <a href="https://twitter.com/" target="_blank"><i class="bi-twitter" id="twitter"></i></a>
         <a href="https://ca.linkedin.com/" target="_blank"><i class="bi-linkedin" id="linked"></i></a>
-        <a href="https://www.youtube.com/@dragonmz5274" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
+        <a href="https://www.youtube.com/" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
       </div>
     </div>
     <div class="col"></div>
