--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ the background gradient start at a better spot-->
       </div>
     </div>
 
+<!--Floating fixed goto Top button-->
+<div class="d-flex justify-content-center align-items-center" id="topbtn">
+  <a href="#navbar"><i class="bi bi-arrow-up fw-bolder"></i></a>
+</div>
+
 <!--Basic footer with social media icons and copyright, the previous sections background gradient flows into this color nicely-->
   <footer class="container-fluid py-2" id="footer">
     <div class="row">
@@ -131,7 +136,7 @@ the background gradient start at a better spot-->
         <div class="d-flex justify-content-evenly" id="socials">
             <a href="https://twitter.com/" target="_blank"><i class="bi-twitter" id="twitter"></i></a>
             <a href="https://ca.linkedin.com/" target="_blank"><i class="bi-linkedin" id="linked"></i></a>
-            <a href="https://www.youtube.com/@dragonmz5274" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
         </div>
       </div>
       <div class="col"></div>
