--- a/resume.html
+++ b/resume.html
@@ -55,9 +55,19 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   </div>
 </nav>
 
+<!--First Section-->
 <div class="container-fluid pb-5" id="skills">
   <div class="row mb-5">
     <img src="images/IMG_20180302_135939.jpg" alt="famous anime tree in yokohama" id="banner">
+  </div>
+
+  <div class="row mb-5">
+    <div class="text-center">
+      <p class="mx-5 fs-2">Hi, I'm Tom and I've always had an interest in Gamedev and really enjoy the puzzle-solving of
+      programming. I started with C++ back in highschool and am currently going for a diploma in the ICS
+      program at Camosun College. Current plans involve going to become a Systems/Network Administrator
+      as a career and do Gamedev projects on the side</p>
+    </div>
   </div>
 
   <div class="row mb-5">
@@ -201,6 +211,11 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
   <a class="fs-1" href="Thomas_Adler_Resume.pdf" id="resumeDownload">| Download Resume |</a>
 </div>
 
+<!--Floating fixed goto Top button-->
+<div class="d-flex justify-content-center align-items-center" id="topbtn">
+  <a href="#navbar"><i class="bi bi-arrow-up fw-bolder"></i></a>
+</div>
+
 <!--Basic footer with social media icons and copyright, the previous sections background gradient flows into this color nicely-->
 <footer class="container-fluid py-2" id="footer">
   <div class="row">
@@ -209,7 +224,7 @@ The projects icon is a dropdown menu instead of a standard anchor with each part
       <div class="d-flex justify-content-evenly" id="socials">
         <a href="https://twitter.com/" target="_blank"><i class="bi-twitter" id="twitter"></i></a>
         <a href="https://ca.linkedin.com/" target="_blank"><i class="bi-linkedin" id="linked"></i></a>
-        <a href="https://www.youtube.com/@dragonmz5274" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
+        <a href="https://www.youtube.com/" target="_blank"><i class="bi-youtube" id="youtube"></i></a>
       </div>
     </div>
     <div class="col"></div>
